--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:onClick="authenticate"
         android:text="@string/action_sign_in_short"
         app:layout_constraintBottom_toTopOf="@+id/remember_me_switch"
         app:layout_constraintEnd_toEndOf="parent"
