--- a/app/src/main/res/layout/fragment_sleep_tab1.xml
+++ b/app/src/main/res/layout/fragment_sleep_tab1.xml
@@ -6,9 +6,14 @@
     tools:context=".SleepTab1">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/BarChart1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="This is the sleep tab 1 fragment" />
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="300dp"
+        android:layout_marginTop="32dp"/>
 
 </FrameLayout>
