--- a/app/src/main/res/layout/fragment_sleep_tab2.xml
+++ b/app/src/main/res/layout/fragment_sleep_tab2.xml
@@ -12,7 +12,16 @@
         android:layout_height="match_parent"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="375dp"
         android:layout_marginTop="32dp"/>
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/BarChart3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="355dp"/>
 
 </FrameLayout>
