--- a/app/src/main/res/layout/fragment_exercise_log.xml
+++ b/app/src/main/res/layout/fragment_exercise_log.xml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExerciseLog">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is the exercise log fragment" />
 
-</FrameLayout>
+    <TableLayout
+        android:id="@+id/exercise_log_main_table"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:id="@+id/exercise_log_table_headers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:weightSum="1.0">
+
+            <TextView
+                android:id="@+id/exercise_log_header_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:gravity="center"
+                android:text="@string/exercise_log_header_time"
+                android:textColor="@android:color/primary_text_dark" />
+
+            <TextView
+                android:id="@+id/exercise_log_header_description"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="@string/exercise_log_header_description"
+                android:textColor="@android:color/primary_text_dark" />
+
+            <TextView
+                android:id="@+id/exercise_log_header_calories_burnt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:gravity="center"
+                android:text="@string/exercise_log_header_calories_burnt"
+                android:textColor="@android:color/primary_text_dark" />
+
+            <TextView
+                android:id="@+id/exercise_log_header_length"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:gravity="center"
+                android:text="@string/exercise_log_header_length"
+                android:textColor="@android:color/primary_text_dark" />
+        </TableRow>
+
+    </TableLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
