--- a/app/src/main/res/layout/fragment_food_log.xml
+++ b/app/src/main/res/layout/fragment_food_log.xml
@@ -2,10 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/food_log_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FoodLog">
-    <!-- TODO: Update blank fragment layout -->
+
+
+    <SearchView
+        android:id="@+id/food_log_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:iconifiedByDefault="true"
+        android:queryHint="Search based on description..."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TableRow
         android:id="@+id/food_log_headers_row"
         android:layout_width="fill_parent"
@@ -16,14 +29,16 @@
         android:weightSum="1.0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/food_log_search_view">
 
         <TextView
             android:id="@+id/food_log_header_time"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.28"
+            android:drawableLeft="@android:drawable/arrow_down_float"
             android:gravity="center"
+            android:tag="desc"
             android:text="@string/exercise_log_header_time"
             android:textColor="@android:color/primary_text_dark" />
 
@@ -31,26 +46,29 @@
             android:id="@+id/food_log_header_description"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.42"
+            android:layout_weight="0.36"
             android:gravity="center"
+            android:tag="placeholder"
             android:text="@string/exercise_log_header_description"
             android:textColor="@android:color/primary_text_dark" />
 
         <TextView
-            android:id="@+id/food_log_header_total_calories"
+            android:id="@+id/food_log_header_num_servings"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"
+            android:layout_weight="0.18"
             android:gravity="center"
-            android:text="@string/number_of_servings"
+            android:tag="placeholder"
+            android:text="@string/num_servings"
             android:textColor="@android:color/primary_text_dark" />
 
         <TextView
-            android:id="@+id/exercise_log_type"
+            android:id="@+id/food_log_type"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"
+            android:layout_weight="0.18"
             android:gravity="center"
+            android:tag="placeholder"
             android:text="@string/type"
             android:textColor="@android:color/primary_text_dark" />
     </TableRow>
